--- a/desafio-02/index.html
+++ b/desafio-02/index.html
@@ -27,11 +27,11 @@
   <body>
     <header>
       <div class="container-fluid" id="nav-container">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-md">
           <button
             class="navbar-toggler"
             type="button"
-            data-toggle="colapse"
+            data-toggle="collapse"
             data-target="#navbar-links"
             aria-controls="navbar-links"
             aria-expanded="false"
@@ -144,20 +144,6 @@
         </div>
       </div>
     </footer>
-
-    <!-- <div class="container-fluid footer-container">
-      <div class="row">
-        <div class="col-3">Follow Us</div>
-        <div class="col">
-          <span class="title">Contact</span>
-          <ul class="data">
-            <li>2490 Leisure Lane</li>
-            <li>San Luis Obispo</li>
-            <li>California</li>
-          </ul>
-        </div>
-      </div>
-    </div> -->
 
     <script src="./scripts//main.js"></script>
     <script
