Aplica responsividade à segunda seção

--- a/desafio-02/index.html
+++ b/desafio-02/index.html
@@ -107,7 +107,31 @@
       <section class="container">
         <div class="row">
           <div class="col px-0">
-            <div style="background-color: #506fa9; min-height: 50px"></div>
+            <div class="down-section">
+              <div class="down-section-container">
+                <div class="down-section-text-container">
+                  <div class="down-section-title">
+                    <div><span>We are Leader</span></div>
+                    <div><span>in Measure Tapes</span></div>
+                  </div>
+                  <div class="down-section-text">
+                    <div><span>There are 5x the</span></div>
+                    <div><span>circumference of planet</span></div>
+                    <div><span>earth in metric tapes.</span></div>
+                  </div>
+                </div>
+                <div class="down-section-image">
+                  <div class="downtape-container">
+                    <img
+                      id="downTape"
+                      class="img-fluid"
+                      src="img/zutterman_tape02.png"
+                      alt="Zuterman Logo"
+                    />
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
