index.html: Realiza pequeno ajuste

--- a/desafio-01/public/index.html
+++ b/desafio-01/public/index.html
@@ -7,7 +7,6 @@
             content="minimum-scale=1, initial-scale=1, width=device-width"
         />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta name="description" content="Busca de produtos" />
         <link
@@ -18,8 +17,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/icon?family=Material+Icons"
         />
-
-        <title>Lista de Produtos</title>
+        <title>Busca de Produtos</title>
     </head>
     <body>
         <noscript
